--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,14 +42,13 @@ dependencies {
     //implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'com.google.android.material:material:1.3.0'
 
     // ROS
     implementation "org.ros.rosjava_core:rosjava:0.3.6"
     // implementation "org.ros.rosjava_messages:diagnostic_msgs:1.12.7"
     implementation 'org.ros.rosjava_messages:geometry_msgs:1.12.7'
     // implementation 'org.ros.rosjava_messages:nav_msgs:1.12.7'
-    implementation 'org.ros.rosjava_messages:std_msgs:0.5.11'
+    // implementation 'org.ros.rosjava_messages:std_msgs:0.5.11'
     // implementation 'org.ros.rosjava_messages:map_msgs:1.13.0'
     implementation 'org.ros.rosjava_messages:sensor_msgs:1.12.7'
     implementation 'org.ros.rosjava_bootstrap:message_generation:0.3.3'
