--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,9 +48,12 @@ dependencies {
     // implementation "org.ros.rosjava_messages:diagnostic_msgs:1.12.7"
     implementation 'org.ros.rosjava_messages:geometry_msgs:1.12.7'
     // implementation 'org.ros.rosjava_messages:nav_msgs:1.12.7'
-    // implementation 'org.ros.rosjava_messages:std_msgs:0.5.11'
+    implementation 'org.ros.rosjava_messages:std_msgs:0.5.11'
     // implementation 'org.ros.rosjava_messages:map_msgs:1.13.0'
     implementation 'org.ros.rosjava_messages:sensor_msgs:1.12.7'
     implementation 'org.ros.rosjava_bootstrap:message_generation:0.3.3'
     implementation 'org.ros.android_core:android_core_components:0.4.0'
+
+    // OpenCV
+    implementation 'com.quickbirdstudios:opencv:4.3.0'
 }
